httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: application
  name: httpd-server
  labels:
    app: httpd-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-server
  template:
    metadata:
      labels:
        app: httpd-server
    spec:
      containers:
      - name: httpd
        image: httpd:2.4.57-alpine
        ports:
        - containerPort: 80
