httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: application
  name: httpd-server-service
spec:
  selector:
    app: httpd-server
  ports:
    - port: 80
