ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: application
  name: test-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /app
            backend:
              service:
                name: echo-server-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /demo
            backend:
              service:
                name: httpd-server-service
                port:
                  number: 80
